# haskell-intro

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  README.md  assignments.cabal  cabal.project  check-assignments.hs  hie.yaml
assignments/a/: A.hs  a.cabal
assignments/b/: .hlint.yaml  B.hs  b.cabal
assignments/c/: C.hs  c.cabal
assignments/d/: D.hs  d.cabal
assignments/e/: E.hs  e.cabal
assignments/f/: F.hs  f.cabal
assignments/x/: Mastermind.hs  mastermind.cabal
notes/: README.md
tests/: check-assignments.hs  tests.cabal
tests/examples/: ATest.hs  BTest.hs  CTest.hs  DTest.hs  FTest.hs
tests/lib/: TestsCommon.hs
