cabal-version: 2.0
name: haskell-intro-assignments
version: 0.1
build-type: Simple


library a
  default-language: Haskell2010
  build-depends: base
  exposed-modules: A
  hs-source-dirs: assignments/a

library b
  default-language: Haskell2010
  build-depends: base
  exposed-modules: B
  hs-source-dirs: assignments/b

library c
  default-language: Haskell2010
  build-depends: base
  exposed-modules: C
  hs-source-dirs: assignments/c

library d
  default-language: Haskell2010
  build-depends: base
  exposed-modules: D
  hs-source-dirs: assignments/d

library e
  default-language: Haskell2010
  build-depends: base, random >= 1.2, directory >= 1.3
  exposed-modules: E
  hs-source-dirs: assignments/e

library f
  default-language: Haskell2010
  build-depends: base, containers ^>= 0.6.5, transformers ^>= 0.5.6
  exposed-modules: F
  hs-source-dirs: assignments/f

executable mastermind
  default-language: Haskell2010
  main-is: Mastermind.hs
  hs-source-dirs: assignments/x
  build-depends: base, random

-- Test suites
executable check-assignments
  default-language: Haskell2010
  main-is: check-assignments.hs
  hs-source-dirs: .
  build-depends: 
    base, 
    text, 
    optparse-applicative,
    attoparsec, 
    directory,
    shelly >= 1.9,
    junit-xml >= 0.1,
    hspec, QuickCheck, hspec-junit-formatter == 1.0.1.0, hspec-core, random, conduit,
    statistics


-- test-suite a-tests
--   type: exitcode-stdio-1.0
--   main-is: ATest.hs
--   hs-source-dirs: .tests/a/tests
--   build-depends:
--     base, hspec, QuickCheck, hspec-junit-formatter == 1.0.1.0, hspec-core, random, a, conduit
--   default-language: Haskell2010

-- test-suite b-tests
--   type: exitcode-stdio-1.0
--   main-is: BTest.hs
--   hs-source-dirs: .tests/b/tests
--   build-depends:
--     base, hspec, QuickCheck, hspec-junit-formatter == 1.0.1.0, hspec-core, random, b, conduit
--   default-language: Haskell2010
