cabal-version: 2.0
name: tests-common
version: 0.1
build-type: Simple

library 
  default-language: Haskell2010
  exposed-modules: TestsCommon
  hs-source-dirs: lib
  build-depends: 
    base, 
    attoparsec ^>= 0.14, 
    directory ^>= 1.3,
    text ^>= 2.0,
    shelly >= 1.9,
    junit-xml >= 0.1

-- Test suites
executable check-assignments
  default-language: Haskell2010
  main-is: check-assignments.hs
  build-depends: 
    base, 
    text, 
    optparse-applicative,
    attoparsec, 
    directory,
    shelly >= 1.9,
    junit-xml >= 0.1,
    hspec, QuickCheck, hspec-junit-formatter == 1.0.1.0, hspec-core, random, conduit,
    statistics,
    tests-common
